--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ h1, h2, h3, h4, h5, h6 {
     
       <h4>Blueberry Pancakes</h4>
       <p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>    
+      <h4>A esperança em Cristo</h4>
+      <p class="w3-text-grey">O materialismo é uma prisão, o cristianismo é a chave desta prisão</p>    
     </div>
     
     <div class="w3-col l6 w3-padding-large">
