--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
       <h4>Blueberry Pancakes</h4>
       <p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>    
       <h4>A esperança em Cristo</h4>
-      <p class="w3-text-grey">O materialismo é uma prisão, o cristianismo é a chave desta prisão</p>    
+      <p class="w3-text-grey">O materialismo é uma prisão, o cristianismo é a chave desta prisão - "E conhecereis a verdade, e a verdade vos libertará." João 8:32</p>    
     </div>
     
     <div class="w3-col l6 w3-padding-large">
